--- a/src/index.html
+++ b/src/index.html
@@ -26,9 +26,26 @@
     <main>
       <div class="container">
         <h1>Популярні інетрактивні ігри</h1>
+        <hr />
+        <load ="partials/date.html" />
+        <hr />
+        <load ="partials/guess.html" />
+        <hr />
+        <load ="partials/rsp.html" />
+        <hr />
+        <load ="partials/calculator.html" />
+        <hr />
+        <load ="partials/time-calculator.html" />
+        <hr />
+        <load ="partials/dinosaur.html" />
+        <hr />
         <load ="partials/football.html" />
-        <!-- <load ="partials/football.html" />
-      <load ="partials/football.html" /> -->
+        <hr />
+        <load ="partials/enter-numbers.html" />
+        <hr />
+        <load ="partials/our-team.html" />
+        <hr />
+        <load ="partials/scientists.html" />
       </div>
     </main>
 
