--- a/src/index.html
+++ b/src/index.html
@@ -21,7 +21,7 @@
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
-    <!-- <load ="partials/modal.html" /> -->
+    <load ="partials/modal.html" />
     <load ="partials/header.html" />
 
     <main>
