--- a/src/index.html
+++ b/src/index.html
@@ -25,7 +25,7 @@
     <load ="partials/header.html" />
 
     <main>
-      <div class="container">
+      <div class="container" style="padding-top: 36px; padding-bottom: 0">
         <h1>Популярні інетрактивні ігри</h1>
         <hr />
         <load ="partials/date.html" />
