--- a/src/index.html
+++ b/src/index.html
@@ -26,7 +26,7 @@
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
-    <load ="partials/modal.html" />
+    <!-- <load ="partials/modal.html" /> -->
     <!-- <load ="partials/thanks-modal.html" /> -->
     <load ="partials/header.html" />
 
