--- a/src/index.html
+++ b/src/index.html
@@ -27,7 +27,7 @@
   </head>
   <body>
     <!-- <load ="partials/modal.html" /> -->
-    <!-- <load ="partials/thanks-modal.html" /> -->
+    <load ="partials/thanks-modal.html" />
     <load ="partials/header.html" />
 
     <main>
