--- a/src/index.html
+++ b/src/index.html
@@ -27,13 +27,12 @@
   </head>
   <body>
     <load ="partials/modal.html" />
-    <load ="partials/thanks-modal.html" />
+    <!-- <load ="partials/thanks-modal.html" /> -->
     <load ="partials/header.html" />
 
     <main>
       <div class="container" style="padding-top: 36px; padding-bottom: 0">
         <h1>Популярні інетрактивні ігри</h1>
-        <hr />
         <load ="partials/date.html" />
         <load ="partials/guess.html" />
         <load ="partials/rsp.html" />
